Updated candidate requirements page; added grad requirements.

--- a/templates/requirements.html
+++ b/templates/requirements.html
@@ -8,12 +8,12 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-        <h4>New Member Candidates</h4>
+        <h4>Undergraduate Candidates</h4>
       </a>
     </div>
     <div id="collapseOne" class="panel-collapse collapse in"> 
       <div class="panel-body">
-        <h5>Initiation Requirements</h5>
+        <h5>Initiation Requirements:</h5>
         <ul>
           <li>Bent Polish</li>
           <li>Candidate Quiz</li>
@@ -21,12 +21,12 @@
           <li>Social Event</li>
           <li>Signature Book</li>
           <li>Community Service</li>
-          <li>Initation Fee</li>
+          <li>Initiation Fee</li>
           <li>Tutoring</li>
           <li>Engineering Futures</li>
           <li>Resume Submission</li>
           <li>Professor Interview</li>
-          <li>Attend Initation Ceremony and Banquet</li>
+          <li>Attend Initiation Ceremony and Banquet</li>
         </ul>
       </div>
     </div>
@@ -34,18 +34,45 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-        <h4>Distinguished Active Candidates</h4>
+        <h4>Distinguished Active Members</h4>
       </a>
     </div>
     <div id="collapseTwo" class="panel-collapse collapse"> 
       <div class="panel-body">
-        <h5>Requirements</h5>
+        <h5>Requirements:</h5>
         <ul>
-          <li>Tutoring (2 hrs/week from Week 3 to Week 9) and/or EMCC</li>
-          <li>Two events hosted by TBP (i.e. infosessions, socials, Engineering Futures, competitions, etc.)</li>
+          <li>Weekly Program (one of the following):</li>
+            <ul>
+              <li>Tutoring (2 hrs/week from Week 3 to Week 9)</li>
+              <li>EMCC</li>
+              <li>Project Planning Committee (e.g. Rube Goldberg)</li>
+            </ul>
+          <li>Two events hosted by TBP (i.e. info sessions, socials, Engineering Futures, competitions, etc.)</li>
         </ul>		
 
         <p>Once members have completed the requirements to become distinguished actives they are eligible to purchase a white stole to wear at graduation (see picture). Members will receive $5 off their stole for completion of the requirements in subsequent quarters. All members who complete the distinguished active requirements for a given quarter will be invited to attend the next TBP banquet.</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading">
+      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+        <h4>Graduate Candidates</h4>
+      </a>
+    </div>
+    <div id="collapseThree" class="panel-collapse collapse">
+      <div class="panel-body">
+        <h5>Initiation Requirements:</h5>
+        <ul>
+            <li>Have been in enrolled for at least two quarters.</li>
+            <li>Have completed 50% of your coursework, including research, as determined by your research adviser.</li>
+            <li>Confirm that you are in the top one-fifth of your class; a statement by a faculty member that you are doing graduate work of the quality expected of a member of TBP can be substituted for class-rank certification, since class rank is often difficult to determine for graduate students.</li>
+            <li>Fill out the form <a href="http://tbp.org/off/SectionEligibility.pdf">here</a>. We will help you with this, should you choose to initiate.</li>
+            <li>Initiation Fee</li>
+            <li>Attend one of the two Meet and Greet events. We will send you more information about this, should you choose to initiate.</li>
+            <li>Attend Initiation</li>
+        </ul>
       </div>
     </div>
   </div>
