Temporarily Closing Registration

--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@
       {% csrf_token %}
       <fieldset>
         <legend>Register TBP Account</legend>
-        <p class="help-block">Hello! We're excited that you'll be initiating into the Tau Beta Pi, California Epsilon Chapter this quarter.
+        <p class="help-block">Registration is temporarily down. Please email president@tbp.seas.ucla.edu if you have any questions.
         {% include "form_snippet.html" %}
         <div class="form-actions">
           <button type="submit" class="btn btn-primary">Submit</button>
