--- a/templates/officers.html
+++ b/templates/officers.html
@@ -19,10 +19,10 @@
 <table class="table">
   {% for position in positions %}
   <tr>
-    <th>{{ position.0 }}</th>
-    <td>{{ position.1.0 }}</td>
+    <th>{{ position.0 }}{% if position.1 and user.is_staff %} (<a href="{{ position.1 }}@tbp.seas.ucla.edu">{{ position.1 }}@tbp.seas.ucla.edu</a>){% endif %}</th>
+    <td>{{ position.2.0 }}</td>
   </tr>
-    {% for officer in position.1|slice:"1:" %}
+    {% for officer in position.2|slice:"1:" %}
   <tr>
     <td></td>
     <td>{{ officer }}</td>
