--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link href="/static/dist/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc2/css/bootstrap-glyphicons.css" rel="stylesheet">
     <link href="/static/css/style.css" rel="stylesheet">
+    <link href="/favicon.ico" rel="shortcut icon">
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-static-top" role="navigation">
