--- a/templates/home.html
+++ b/templates/home.html
@@ -59,7 +59,7 @@
       <h4>Announcements</h4>
       {% if display %}<a href="{% url 'tutoring.views.schedule' %}" class="btn btn-large btn-primary">The Tutoring Schedule is Up!</a>{% endif %}
       <h4>Upcoming Events</h4>
-      {% for event in upcomingEvents %}
+      {% for event in upcoming_events %}
         <dl>
           <dd><a href="/events/{{ event.url }}">{{ event.name }}</a></dd>
           <dd>{{ event.location }}</dd>
