--- a/templates/base.html
+++ b/templates/base.html
@@ -108,7 +108,7 @@
         </div>
       </div>
     </footer>
-    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/static/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
