Serve static images on home through http

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,7 +21,7 @@
         <div class="carousel-inner">
           <div class="item active">
             <a href="{% url 'web.views.about' %}">
-              <img src="/static/img/about.jpg" alt="" />
+              <img src="http://tbp.seas.ucla.edu/static/img/about.jpg" alt="" />
             </a>
             <div class="carousel-caption">
               <a href="{% url 'web.views.about' %}" style="color:white"><h4>About Us</h4></a>
@@ -29,7 +29,7 @@
           </div>
           <div class="item">
             <a href="{% url 'web.views.tutoring' %}">
-              <img src="/static/img/tutoring.jpg" alt="" />
+              <img src="http://tbp.seas.ucla.edu/static/img/tutoring.jpg" alt="" />
             </a>
             <div class="carousel-caption">
               <a href="{% url 'web.views.tutoring' %}" style="color:white"><h4>Tutoring</h4></a>
@@ -37,7 +37,7 @@
           </div>
           <div class="item">
             <a href="{% url 'event.views.events' %}">
-              <img src="/static/img/events.jpg" alt="" />
+              <img src="http://tbp.seas.ucla.edu/static/img/events.jpg" alt="" />
             </a>
             <div class="carousel-caption">
               <a href="{% url 'event.views.events' %}" style="color:white"><h4>Events</h4></a>
