--- a/templates/all_candidate_requirements.html
+++ b/templates/all_candidate_requirements.html
@@ -8,6 +8,7 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Count</th>
       <th>Bent Polish</th>
       <th>Candidate Quiz</th>
       <th>Candidate Meet and Greet</th>
@@ -25,6 +26,7 @@
     {% for candidate in candidate_list %}
     <tr{% if candidate.complete%} class="success"{% endif %}>
       <td>{{ candidate }}</td>
+      <td>{{ candidate.requirement_count }}</td>
       <td>{% if candidate.bent_polish %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
       <td>{% if candidate.candidate_quiz %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
       <td>{% if candidate.candidate_meet_and_greet %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
