Added wiki link

--- a/templates/base.html
+++ b/templates/base.html
@@ -74,6 +74,7 @@
               <li><a href="{% url 'main.views.pending_community_service' %}">Pending Community Service</a></li>
               <li><a href="{% url 'main.views.tutoring_hours' %}">Tutoring Hours</a></li>
               <li><a href="{% url 'main.views.downloads' %}">Downloads</a></li>
+              <li><a href="https://sites.google.com/site/tbpcaeofficers/">Wiki</a></li>
             </ul>
             </li>
             {% endif %}
