--- a/templates/all_candidate_requirements.html
+++ b/templates/all_candidate_requirements.html
@@ -30,7 +30,7 @@
       <td>{% if candidate.bent_polish %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
       <td>{% if candidate.candidate_quiz %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
       <td>{% if candidate.candidate_meet_and_greet %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
-      <td>{% if candidate.social_complete %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
+      <td>{% if candidate.social_complete %}<span class="glyphicon glyphicon-ok"></span>{% endif %}({{ candidate.social_count }})</td>
       <td>{% if candidate.signature_book %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
       <td>{% if candidate.community_service_complete %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
       <td>{% if candidate.initiation_fee %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
