--- a/templates/tutoring_logging.html
+++ b/templates/tutoring_logging.html
@@ -13,7 +13,7 @@
     {% endif %}
 
     {% if isTutoring %}
-        <form method="post">
+        <form role="form" method="post">
             {% csrf_token %}
             <div class="form-group">
                 Number of Tutees: <input type="number" name="tutees"/>
