--- a/templates/tutoring_logging.html
+++ b/templates/tutoring_logging.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h1>Tutoring Hours Logging</h1>
 <div class="row">
-
+  <div class="col-md-12">
     {% if error %}
         <p class="text-danger">{{ error }}</p>
     {% elif isTutoring %}
@@ -16,17 +16,18 @@
         <form role="form" method="post">
             {% csrf_token %}
             <div class="form-group">
-                Number of Tutees: <input type="number" name="tutees"/>
+                Number of Tutees: <input type="number" name="tutees" min="0" value="0"/>
             </div>
             <div class="form-group">
                 Subjects Tutored: <input type="text" name="classes"/> <!-- FIX THIS UGH -->
             </div>
             <div class="form-group">
-                How much of this time is makeup?
-                <ul class="list-unstyled">
+              How much of this time is makeup?
+                  <ul>
                 <li>For a previous week: <input type="number" name="makeup_tutoring" min="0" value="0"/> </li>
                 <li>For an event I missed: <input type="number" name="makeup_event" min="0" value="0"/> </li>
-                </ul>
+              </ul>
+            </ul>
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-primary" name="sign_out">Sign out of Tutoring</button>
@@ -42,5 +43,5 @@
         </form>
     {% endif %}
   </div>
-
+</div>
 {% endblock %}
