adding access to hour logging page on home and nav menu.
also fixed mobile page that still showed the "tutoring schedule is up" button xD

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,9 @@
             <ul class="dropdown-menu">
               <li><a href="{% url 'tutoring.views.schedule' %}">Schedule</a></li>
               <li><a href="{% url 'tutoring.views.feedback' %}">Feedback</a></li>
+              {% if user.is_authenticated %}
+              <li><a href="{% url 'tutoring.views.tutoring_logging %}">Log Hours</a></li>
+              {% endif %}
             </ul>
             </li>
             <li class="dropdown">
