--- a/templates/home.html
+++ b/templates/home.html
@@ -59,6 +59,9 @@
     <div class="col-md-4 visible-md visible-lg">
       <h2>UCLA Tau Beta Pi</h2>
       <h4>Announcements</h4>
+      {% if user.is_authenticated %}
+        <a href="{% url 'tutoring.views.tutoring_logging' %}" class="btn btn-large btun-primary">Log Tutoring Hours Here</a>
+      {% endif %}
       {% if display %}<a href="{% url 'tutoring.views.schedule' %}" class="btn btn-large btn-primary">The Tutoring Schedule is Up!</a>{% endif %}
       <h4>Upcoming Events</h4>
       {% for event in upcoming_events %}
@@ -76,7 +79,7 @@
     <div class="col-xs-12 visible-xs visible-sm">
       <h2>UCLA Tau Beta Pi</h2>
       <h4>Announcements</h4>
-      <a href="{% url 'tutoring.views.schedule' %}" class="btn btn-large btn-primary">The Tutoring Schedule is Up!</a>
+      {% if display %}<a href="{% url 'tutoring.views.schedule' %}" class="btn btn-large btn-primary">The Tutoring Schedule is Up!</a>{% endif %}
       <h4>Upcoming Events</h4>
       {% for event in upcomingEvents %}
         <dl>
