--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
               <li><a href="{% url 'tutoring.views.schedule' %}">Schedule</a></li>
               <li><a href="{% url 'tutoring.views.feedback' %}">Feedback</a></li>
               {% if user.is_authenticated %}
-              <li><a href="{% url 'tutoring.views.tutoring_logging %}">Log Hours</a></li>
+              <li><a href="{% url 'tutoring.views.tutoring_logging' %}">Log Hours</a></li>
               {% endif %}
             </ul>
             </li>
