--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
     }
   </style>
   <div class="row">
-    <div class="col-xs-12 col-md-8">
+    <div class="col-xs-12 col-md-8 hidden-xs hidden-sm">
       <div id="carousel" class="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -60,7 +60,7 @@
       <h2>UCLA Tau Beta Pi</h2>
       <h4>Announcements</h4>
       {% if user.is_authenticated %}
-        <a href="{% url 'tutoring.views.tutoring_logging' %}" class="btn btn-large btun-primary">Log Tutoring Hours Here</a>
+        <a href="{% url 'tutoring.views.tutoring_logging' %}" class="btn btn-large btn-primary">Log Tutoring Hours Here</a>
       {% endif %}
       {% if display %}<a href="{% url 'tutoring.views.schedule' %}" class="btn btn-large btn-primary">The Tutoring Schedule is Up!</a>{% endif %}
       <h4>Upcoming Events</h4>
@@ -77,7 +77,7 @@
   </div>
   <div class="row">
     <div class="col-xs-12 visible-xs visible-sm">
-      <h2>UCLA Tau Beta Pi</h2>
+      <!-- <h2>UCLA Tau Beta Pi</h2> -->
       <h4>Announcements</h4>
       {% if display %}<a href="{% url 'tutoring.views.schedule' %}" class="btn btn-large btn-primary">The Tutoring Schedule is Up!</a>{% endif %}
       <h4>Upcoming Events</h4>
