fixed term option for DA page. plus formatting. always formatting

--- a/templates/active_members.html
+++ b/templates/active_members.html
@@ -7,16 +7,19 @@
 <div class="row">
     <div class="col-md-12">
         <div class="pull-right">
-            <form role="form" method="post">
+          <form role="form" method="post">
+            {% csrf_token %}
                 <select name="term">
                     {% for t in terms %}
-                    <option value="{{ t.id }}">{{ t.quarter }} {{ t.year }}</option>
+                    <option value="{{ t.id }}">{{ t }}</option>
                     {% endfor %}
                 </select>
                 <button type="submit" class="btn btn-primary" name="submit">Change Term</button>
             </form>
         </div>
-    </div>
+      </div>
+</div>
+<div class="row">
     <div class="col-md-12">
         <table class="table">
           <thead>
