stuff rachel changed

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,8 @@
             <ul class="dropdown-menu">
               <li><a href="{% url 'web.views.requirements' %}">Requirements</a></li>
               <li><a href="{% url 'main.views.houses' %}">Houses</a></li>
-              <li><a href="{{ eligibility_list }}">Eligibility List</a></li>
+              <!-- <li><a href="{{ eligibility_list }}">Eligibility List</a></li> -->
+              <li><a href="../media/files/Eligibility List for Sp14.pdf">Eligibility List</a></li>
             </ul>
             </li>
             <li class="dropdown">
