--- a/templates/eligibility_list.html
+++ b/templates/eligibility_list.html
@@ -6,6 +6,6 @@
 
 <h1>Eligibility List</h1>
 
-<p>The list of eligible candidates for Tau Beta Pi for the Fall 2012 quarter is now available! See the attached file below.
+<p>The list of eligible candidates for Tau Beta Pi for the Spring 2014 quarter is now available! See the attached file below.
 
 {% endblock %}
