update by Hannah Jin

--- a/templates/houses.html
+++ b/templates/houses.html
@@ -18,35 +18,43 @@
     </tr>
     <tr>
       <td>Tutoring at your scheduled hours (7 weeks) – no points for makeup</td>
-      <td>2 points/wk</td>
+      <td>2 points/week</td>
     </tr>
     <tr>
       <td>Community Service</td>
       <td>6 points</td>
     </tr>
     <tr>
-      <td>Attend social event (2)</td>
-      <td>2 points/event</td>
-    </tr>
-    <tr>
-      <td>Turn in professor interview, resume on time</td>
+      <td>TBP Event (or Professor Interview: 4 points)</td>
       <td>6 points</td>
     </tr>
     <tr>
-      <td>Turn in signature book on time</td>
+      <td>Turn in Signature Project</td>
       <td>6 points</td>
     </tr>
     <tr>
-      <td>Bent polish</td>
+      <td>Social Events (2)</td>
+      <td>3 points/event</td>
+    </tr>
+    <tr>
+      <td>Bent Polish</td>
       <td>2 points</td>
     </tr>
     <tr>
-      <td>Passing quiz on first try (70%+)</td>
+      <td>Turn in Resume on time</td>
       <td>2 points</td>
+    </tr>
+    <tr>
+      <td>Passing Candidate Quiz on first try (70%+)</td>
+      <td>2 points</td>
+    </tr>
+    <tr>
+      <td>Attend Candidate Sorting/Meet and Greet/Engineering Futures</td>
+      <td>2 points each</td>
     </tr>
     <tr>
       <td><b>Total:</b></td>
-      <td><b>40 points</b></td>
+      <td><b>50 points</b></td>
     </tr>
     <tr>
       <th><br>Extra Stuff/Ways To Make Up Points</th>
@@ -54,27 +62,43 @@
     </tr>
     <tr>
       <td>Extra tutoring (max 2 hours per week)</td>
-      <td>5 points/hr</td>
+      <td>2 points/hour</td>
     </tr>
     <tr>
       <td>Extra community service</td>
-      <td>15 points/event</td>
+      <td>12 points/event</td>
     </tr>
+    <tr>
+      <td>Extra TBP event</td>
+      <td>12 points/event</td>
+    </td>
     <tr>
       <td>Attending an extra social event (3+)</td>
-      <td>5 points/event</td>
+      <td>6 points/event</td>
     </tr>
     <tr>
-      <td>100%     on membership quiz</td>
-      <td>15 points</td>
+      <td>100% on candidate  quiz</td>
+      <td>8 points</td>
     </tr>
     <tr>
-      <td>90%-99%  on membership quiz</td>
-      <td>10 points</td>
+      <td>90%-99% on candidate quiz</td>
+      <td>6 points</td>
     </tr>
     <tr>
-      <td>80%-89%  on membership quiz</td>
-      <td>5 points</td>
+      <td>80%-89% on candidate quiz</td>
+      <td>4 points</td>
+    </tr>
+    <tr>
+      <td>Best signature project - first place</td>
+      <td>18 points</td>
+    </tr>
+    <tr>
+      <td>Best signature project - second place</td>
+      <td>12 points</td>
+    </tr>
+    <tr>
+      <td>Best signature project - third place</td>
+      <td>6 points</td>
     </tr>
     <tr>
       <th><br>Social Events</th>
@@ -93,20 +117,20 @@
       <td>1 points/attendee</td>
     </tr>
     <tr>
-      <th><br>Interviews and Resumes</th>
+      <th><br>Resumes</th>
       <th>&nbsp</th>
     </tr>
     <tr>
-      <td>1st house to turn in all interviews and resumes</td>
-      <td>6 points/person</td>
+      <td>1st house to turn in all resumes</td>
+      <td>3 points/person</td>
     </tr>
     <tr>
-      <td>2nd house to turn in all interviews and resumes</td>
-      <td>4 points/person</td>
-    </tr>
-    <tr>
-      <td>3rd house to turn in all interviews and resumes</td>
+      <td>2nd house to turn in all resumes</td>
       <td>2 points/person</td>
+    </tr>
+    <tr>
+      <td>3rd house to turn in all resumes</td>
+      <td>1 points/person</td>
     </tr>
     <tr>
       <th><br>Distinguished Active Points</th>
@@ -114,19 +138,19 @@
     </tr>
     <tr>
       <td>Tutoring at your scheduled hours (7 weeks) – no points for makeup</td>
-      <td>2 points/wk</td>
+      <td>2 points/week</td>
     </tr>
     <tr>
       <td>Extra tutoring (max 2 hours per week)</td>
-      <td>5 points/hr</td>
+      <td>4 points/hour</td>
     </tr>
     <tr>
-      <td>Attend social event (2)</td>
-      <td>2 points/event</td>
+      <td>Attend TBP event (2)</td>
+      <td>3 points/event</td>
     </tr>
     <tr>
-      <td>Attending an extra social event (3+)</td>
-      <td>5 points/event</td>
+      <td>Attending an extra TBP event (3+)</td>
+      <td>6 points/event</td>
     </tr>
   </table>
 
