--- a/templates/requirements.html
+++ b/templates/requirements.html
@@ -15,17 +15,18 @@
       <div class="panel-body">
         <h5>Initiation Requirements:</h5>
         <ul>
-          <li>Bent Polish</li>
-          <li>Candidate Quiz</li>
-          <li>Candidate Meet and Greet</li>
-          <li>Social Event</li>
-          <li>Signature Book</li>
-          <li>Community Service</li>
-          <li>Initiation Fee</li>
+          <li>Candidate Sorting</li>
           <li>Tutoring</li>
-          <li>Engineering Futures</li>
+          <li>Candidate Meet and Greet</li>
+          <li>Bent Polish</li>
           <li>Resume Submission</li>
-          <li>Professor Interview</li>
+          <li>Engineering Futures</li>
+          <li>Candidate Quiz</li>
+          <li>Signature Project</li>
+          <li>Initiation Fee</li>
+          <li>Community Service</li>
+          <li>TBP Event</li>
+          <li>Social Events</li>
           <li>Attend Initiation Ceremony and Banquet</li>
         </ul>
       </div>
