added sponsor to the main nav

--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,7 @@
               <li><a href="{% url 'web.views.awards' %}">Awards</a></li>
               <li><a href="{% url 'web.views.officers' %}">Contact Officers</a></li>
               <li><a href="{% url 'web.views.faculty' %}">Faculty</a></li>
+              <li><a href="{% url 'web.views.sponsor' %}">Sponsors</a></li>
             </ul>
             </li>
           </ul>
