tbp event + some points issues fixed

--- a/templates/active_members.html
+++ b/templates/active_members.html
@@ -27,7 +27,7 @@
               <th>Name</th>
               <th>Requirement</th>
               <th>Requirement Complete</th>
-              <th>Social Event</th>
+              <th>Event Requirement</th>
             </tr>
           </thead>
           <tbody>
