event page changes

--- a/templates/events.html
+++ b/templates/events.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h1>Events</h1>
 <div class="row">
-  <div class="col-lg-8">
+  <div class="col-lg-12">
     <table class="table">
       <tr>
         <th>Upcoming Events</th>
@@ -38,8 +38,9 @@
     </table>
 
   </div>
+<!--
   <div class="col-lg-4">
     <img src="/static/img/events_main.jpg" width="100%">
   </div>
-</div>
+</div> -->
 {% endblock %}
